--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="lib/react-dom.development.js"></script>
 
   <link rel="stylesheet" href="assets/style/main.css">
-  <title>React Starter</title>
+  <title>Book App</title>
 </head>
 
 <body>
