--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  
+
   <script src="lib/react.development.js"></script>
   <script src="lib/react-dom.development.js"></script>
 
@@ -21,6 +21,11 @@
   <script src="lib/loadBabelModules.js"></script>
   <script src="lib/babel.js"></script>
   <script src="lib/babel-preset.js"></script>
+  <script src="lib/react-dom.development.js"></script>
+  <script src="lib/history.js"></script>
+  <script src="lib/react-router.js"></script>
+  <script src="lib/react-router-dom.js"></script>
+
 </body>
 
 </html>
